# Terminal

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md
src/: ColorSchemeDialog.cpp  ColorSchemeDialog.h  MainWindow.cpp  MainWindow.h  SSHDialog.cpp  SSHDialog.h
src/tests/: test_main.cpp
